# workflow

./: .env  .env.dev  .env.dev.local  .env.prod  .env.prod.local  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/frontend/application/: Cargo.toml
crates/frontend/application/src/: main.rs
crates/frontend/application/src/app/: mod.rs
crates/frontend/application/src/controllers/: mod.rs
crates/frontend/application/src/controllers/namespace/: mod.rs
crates/frontend_application/: Cargo.toml
crates/frontend_application/src/: config.rs  main.rs
crates/frontend_application/src/app/: setup.rs
crates/frontend_application/src/controllers/: mod.rs
crates/frontend_application/src/controllers/namespace/: mod.rs
crates/frontend_application/src/controllers/namespace/create/: mod.rs
crates/frontend_application/src/controllers/namespace/list/: mod.rs
crates/frontend_application/src/controllers/namespace/one/: mod.rs
crates/frontend_application/src/controllers/namespace/remove/: mod.rs
crates/frontend_application/src/controllers/namespace/task_queue__create/: mod.rs
crates/frontend_application/src/controllers/namespace/task_queue__list/: mod.rs
crates/frontend_application/src/controllers/namespace/workflow__create/: mod.rs
crates/frontend_application/src/controllers/namespace/workflow__list/: mod.rs
crates/frontend_application/src/controllers/workflow/: mod.rs
crates/frontend_application/src/controllers/workflow/list/: mod.rs
crates/frontend_application/src/controllers/workflow/one/: mod.rs
crates/frontend_application/src/controllers/workflow/remove/: mod.rs
crates/frontend_domain/: Cargo.toml
crates/frontend_domain/src/: lib.rs
crates/frontend_domain/src/namespace/: mod.rs
crates/frontend_domain/src/namespace/create/: use_case.rs
crates/frontend_domain/src/namespace/create/repository/: create_namespace.rs  find_namespace_by_name.rs
crates/frontend_domain/src/namespace/create/tests/: mod.rs
crates/frontend_domain/src/namespace/list/: service.rs
crates/frontend_domain/src/namespace/list/repository/: find_namespaces.rs
crates/frontend_domain/src/namespace/one/: mod.rs  service.rs  use_case.rs
crates/frontend_domain/src/namespace/one/tests/: mod.rs
crates/frontend_domain/src/namespace/remove/repository/: remove_namespace_by_id.rs
crates/frontend_domain/src/namespace/task_queue__create/: service.rs  use_case.rs
crates/frontend_domain/src/namespace/task_queue__create/repository/: create_task_queue.rs  find_namespace_by_id.rs  find_task_queue_by_name.rs  mod.rs
crates/frontend_domain/src/namespace/task_queue__create/tests/: mod.rs
crates/frontend_domain/src/namespace/task_queue__list/: service.rs  use_case.rs
crates/frontend_domain/src/namespace/task_queue__list/repository/: find_task_queues.rs  mod.rs
crates/frontend_domain/src/namespace/task_queue__list/tests/: mod.rs
crates/frontend_domain/src/namespace/workflow__create/: service.rs  use_case.rs
crates/frontend_domain/src/namespace/workflow__create/repository/: create_workflow.rs  find_workflow_by_name.rs  mod.rs
crates/frontend_domain/src/namespace/workflow__create/tests/: mod.rs
crates/frontend_domain/src/namespace/workflow__list/: service.rs  use_case.rs
crates/frontend_domain/src/namespace/workflow__list/repository/: find_workflows.rs
crates/frontend_domain/src/namespace/workflow__list/tests/: mod.rs
crates/frontend_domain/src/workflow/: mod.rs
crates/frontend_domain/src/workflow/list/: service.rs  use_case.rs
crates/frontend_domain/src/workflow/list/repository/: find_workflows.rs  mod.rs
crates/frontend_domain/src/workflow/list/tests/: mod.rs
crates/frontend_domain/src/workflow/one/: service.rs  use_case.rs
crates/frontend_domain/src/workflow/one/repository/: find_workflow.rs  mod.rs
crates/frontend_domain/src/workflow/one/tests/: mod.rs
crates/frontend_domain/src/workflow/remove/: service.rs  use_case.rs
crates/frontend_domain/src/workflow/remove/repository/: mod.rs  remove_workflow_by_id.rs
crates/frontend_domain/src/workflow/remove/tests/: mod.rs
(+543 files in other folders)
