[workspace]
resolver = "2"
members = [
  "crates/external/database",
  "crates/external/postgresql",
  "crates/frontend_application",
  "crates/frontend_domain",
  "crates/frontend_infrastructure",
  "crates/tools/const_num",
  "crates/tools/cron",
  "crates/tools/domain",
  "crates/tools/new_types",
]

[workspace.dependencies]
anyhow = "1.0.83"
assert_matches = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
cron = "0.12.1"
dotenvy = "0.15.7"
insta = "1.39.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "chrono",
  "json",
  "postgres",
  "macros",
  "runtime-tokio",
  "uuid",
] }
thiserror = "1.0.60"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v7"] }
